Korrekturen Analyse Notebook

--- a/notebooks/4_nlp_analysis_schlaak_weise.ipynb
+++ b/notebooks/4_nlp_analysis_schlaak_weise.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Transformation der Daten\n",
     "\n",
-    "In diesem Notebook möchten wir eine Clusteranalyse unserer zuvor vorverarbeiteten Daten durchführen, um inhaltlich ähnliche Filme zu einem Genre zuzuordnen. Basierend darauf soll eine Ähnlichkeitsanalyse innerhalb jedes Clusters durchgeführt werden, um Vorschläge für ähnliche Titel aussprechen zu können.\n",
+    "In diesem Notebook wird eine Clusteranalyse unserer zuvor vorverarbeiteten Daten durchgeführt, um inhaltlich ähnliche Filme einem Genre zuzuordnen. Basierend darauf soll eine Ähnlichkeitsanalyse innerhalb jedes Clusters durchgeführt werden, um Vorschläge für ähnliche Titel geben zu können.\n",
     "\n",
     "## Module importieren\n",
     "\n",
-    "Zur Verarbeitung der Datenbasis werden folgende Module benötigt und müssen zuerst importiert werden."
+    "Zur Verarbeitung der Datenbasis werden folgende Module benötigt und müssen zuerst importiert werden:"
    ]
   },
   {
@@ -200,7 +200,7 @@
    "source": [
     "## Feature-Matrix\n",
     "\n",
-    "Damit wir unsere vorverarbeitenden BoWs als Eingabe für unseren k-Means-Clusteralgorithmus verwenden können, erstellen wir eine so genannte Feature-Matrix. Dabei generieren wir eine Matrix der Häufigkeit aller Wörter unsere Dateneinträge mithilfe des `CountVectorizer` gefolgt von einer Normalisierung mittels `TfidfTransformer`. Wir nutzen hierbei die Inverse Dokument Frequency (inverse Dokumentenhäufigkeit). Die inverse Dokumenthäufigkeit misst die Spezifität eines Terms für die Gesamtmenge der betrachteten Dokumente. Ein übereinstimmendes Vorkommen von seltenen Begriffen ist für die Relevanz aussagekräftiger als eine Übereinstimmung bei sehr häufigen Wörtern [[Quelle]](https://de.wikipedia.org/wiki/Tf-idf-Ma%C3%9F)."
+    "Damit wir die vorverarbeitenden BoWs als Eingabe für den k-Means-Clusteralgorithmus verwenden können, erstellen wir eine sogenannte Feature-Matrix: Dabei generieren wir eine Matrix der Häufigkeit aller Wörter unserer Dateneinträge mithilfe des `CountVectorizer` gefolgt von einer Normalisierung mittels `TfidfTransformer`. Wir nutzen hierbei die *Inverse Dokument Frequency* (inverse Dokumentenhäufigkeit): Die inverse Dokumenthäufigkeit misst die Spezifität eines Terms für die Gesamtmenge der betrachteten Dokumente. Ein übereinstimmendes Vorkommen von seltenen Begriffen ist für die Relevanz aussagekräftiger als eine Übereinstimmung bei sehr häufigen Wörtern [[Quelle]](https://de.wikipedia.org/wiki/Tf-idf-Ma%C3%9F)."
    ]
   },
   {
@@ -219,13 +219,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir verwenden weitere Parameter bei der Vektorisierung und Normalisierung der Daten. Diese haben sich besonders während der Analyse des Clustering-Algorithmus bewährt. \n",
+    "Wir verwenden weitere Parameter bei der Vektorisierung und Normalisierung der Daten. Diese haben sich besonders während der Analyse des Clustering-Algorithmus bewährt:\n",
     "\n",
     "* max_df: Ignoriert Token mit Frequenz > Wert\n",
     "* min_df: Ignoriert Token mit Frequenz < Wert\n",
     "* ngram_range: Definiert n-Gramme der spezifizierten Größen, die benutzt werden\n",
     "\n",
-    "Unsere Feature Matrix besteht somit aus 237 Einträgen, die jeweils über 196 Wörter/Token verfügen. Jeder Dateneintrag besitzt selbstverständlich nicht jedes Wort und hat deshalb bei unbenutzten Token eine Frequenz von 0."
+    "Unsere Feature Matrix besteht somit aus 237 Einträgen, die jeweils über 196 Wörter/Token verfügen. Nicht jeder Dateneintrag besitzt jedes Wort und hat daher bei unbenutzten Token eine Frequenz von 0."
    ]
   },
   {
@@ -537,9 +537,9 @@
    "source": [
     "## k-Means-Clustering\n",
     "\n",
-    "Nachdem wir nun valide Inputs generiert haben, können wir mit der Modellierung unseres Clustering Algorithmus fortfahren. Wir nutzen hierfür den so genannten `k-Means`-Algorithmus, der aus einer Menge von ähnlichen Objekten eine zuvor definierte Anzahl an Clustern bildet. Hierfür nutzen wir ebenfalls `sklearn`. \n",
+    "Nachdem wir nun valide Inputs generiert haben, können wir mit der Modellierung unseres Clustering Algorithmus fortfahren. Wir nutzen hierfür den sogenannten `k-Means`-Algorithmus, der aus einer Menge von ähnlichen Objekten eine zuvor definierte Anzahl an Clustern bildet. Hierfür nutzen wir darüberhinaus `sklearn`. \n",
     "\n",
-    "Ein gängier Ansatz bei der Evaluierung von Clustering-Algorithmen ist es, den Algorithmus in einer Schleife bis zu einem bestimmten Schwellwert an Clustern auszuführen. Man nutzt dabei eine Metrik, um die Performanz des Algorithmus zu messen. sklearns `inertia` bietet eine Schnittstelle zur Berechnung der `within-cluster sum-of-squares (WSS)` zur Berechnung der Summe der quadrierten Abweichungen von den Cluster-Schwerpunkten. Valide Werte für die Anzahl an Clustern bei unseren Daten sind: 1, ..., 237. 237 Cluster sind dennoch nicht sinnvoll, da wir so jeden Dateneintrag einem eigenen Cluster zuordnen würden. Wir definieren unsere maximale Anzahl an Clustern, welche für uns die verschiedenen Genres der Filmhandlungen darstellen sollen, als 10."
+    "Ein gängiger Ansatz bei der Evaluierung von Clustering-Algorithmen ist es, den Algorithmus in einer Schleife bis zu einem bestimmten Schwellwert an Clustern auszuführen. Man nutzt dabei eine Metrik, um die Performanz des Algorithmus zu messen. Sklearns `inertia` bietet eine Schnittstelle zur Berechnung der `within-cluster sum-of-squares (WSS)` zur Berechnung der Summe der quadrierten Abweichungen von den Cluster-Schwerpunkten. Valide Werte für die Anzahl an Clustern bei unseren Daten sind: 1, ..., 237. 237 Cluster sind dennoch nicht sinnvoll, da wir so jeden Dateneintrag einem eigenen Cluster zuordnen würden. Wir definieren unsere maximale Anzahl an Clustern, welche für uns die verschiedenen Genres der Filmhandlungen darstellen sollen, als 10."
    ]
   },
   {
@@ -594,7 +594,7 @@
    "source": [
     "## Ergebnisevaluierung\n",
     "\n",
-    "Wir evaluieren unseren Algorithmus auf unseren Daten fortgehend mit einer Anzahl von 7 Clustern/Genren."
+    "Der Algorithmus wird auf den Daten fortgehend mit einer Anzahl von 7 Clustern/Genren evaluiert."
    ]
   },
   {
@@ -623,7 +623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unser Algorithmus terminiert nach 8 Iterationen."
+    "Der Algorithmus terminiert nach 8 Iterationen."
    ]
   },
   {
@@ -677,7 +677,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir fügen alle Cluster-Zuordnung als neue Spalte in unserem DataFrame an, damit man eine direkte Zuordnung zwischen Filmtitel und Cluster hat."
+    "Wir fügen alle Cluster-Zuordnungen als neue Spalte im DataFrame an, damit man eine direkte Zuordnung zwischen Filmtitel und Cluster hat."
    ]
   },
   {
@@ -787,7 +787,7 @@
     "## Clustermerkmale\n",
     "\n",
     "\n",
-    "Man kann nun die Eigenschaften eines Clusters untersuchen, in dem man sich die relevantesten Token der einzelnen Cluster anschaut. Dafür iteriert man über jedes einzelne Cluster und gibt eine bestimmte Anzahl an relevantesten Tokens, welche am nächsten zum Mittelpunkt des Clusters sind, aus. Wir können ebenfalls für jedes Cluster mehrere Filme ausgeben, um das Cluster genauer beschreiben zu können."
+    "Man kann nun die Eigenschaften eines Clusters untersuchen, in dem man sich die relevantesten Token der einzelnen Cluster anschaut. Dafür wird über jedes einzelne Cluster iteriert und eine bestimmte Anzahl an relevantesten Tokens ausgegeben, welche am nächsten zum Mittelpunkt des Clusters sind. Darüberhinaus können für jedes Cluster mehrere Filme ausgeben werden, um das Cluster genauer beschreiben zu können."
    ]
   },
   {
@@ -892,15 +892,15 @@
     "* Cluster 5: Action, Krimi\n",
     "* Cluster 6: Action, Abenteuer, Scifi, Krieg\n",
     "\n",
-    "Was ebenfalls für die Clusteraufteilung spricht ist der Fakt, dass Sequels mit ähnlicher Handlung, dem gleichen Cluster zugeordnet wurden (siehe beispielsweise: Der Herr der Ringe, der Pate). Trotzdem gibt es ein paar Filme die sich zumindest subjektiv innerhalb des gleichen Clusters unterscheiden, beispielsweise Pulp Fiction und Toy Story. Man könnte hierfür eine genauere Analyse der zwei Filme durchführen, um zu entscheiden, ob deren Handlungen wirklich ähnlich sind.\n",
+    "Was ebenfalls für die Clusteraufteilung spricht, ist der Fakt, dass Sequels (Fortsetzungsfilme) mit ähnlicher Handlung dem gleichen Cluster zugeordnet wurden (siehe beispielsweise: Der Herr der Ringe, der Pate). Trotzdem gibt es ein paar Filme die sich zumindest subjektiv innerhalb des gleichen Clusters unterscheiden, beispielsweise Pulp Fiction und Toy Story. Man könnte hierfür eine genauere Analyse der zwei Filme durchführen, um zu entscheiden, ob deren Handlungen wirklich ähnlich sind.\n",
     "\n",
-    "Die Aufteilung der Filme ist dennoch sehr zufriedenstellend, was unsere Vorverarbeitung der Daten bestätigt.\n",
+    "Die Aufteilung der Filme ist dennoch sehr zufriedenstellend, was die Qualität der Datenvorverarbeitung verdeutlicht.\n",
     "\n",
     "## Ähnlichkeitsanalyse der Filme eines Clusters\n",
     "\n",
-    "Basierend auf dieser Aufteilung aller Filme zu Clustern/Genres, kann nun eine Ähnlichkeitsanalyse durchgefürt werden. Es bietet sich an nur Filme innerhalb eines Genres zu vergleichen, da diese sich inhaltlich am ähnlichsten sind.\n",
+    "Basierend auf dieser Aufteilung aller Filme in Clustern/Genres, kann nun eine Ähnlichkeitsanalyse durchgefürt werden: Es bietet sich an, nur Filme innerhalb eines Genres zu vergleichen, da sich diese inhaltlich am ähnlichsten sind.\n",
     "\n",
-    "spaCy bietet hierfür eine Methode namens `similarity()`, die die Kosinus Ähnlichkeit zwischen zwei Vektoren (z.B. Token oder Dokumenten) berechnet. spaCy setzt hierfür voraus, dass man ein Sprachmodell verwendet, welches über Wort Vektoren verfügt. Wir importieren dafür zuerst ein umfangreicheres Sprachmodell."
+    "spaCy bietet hierfür eine Methode namens `similarity()`, welche die Kosinus-Ähnlichkeit zwischen zwei Vektoren (z.B. Token oder Dokumenten) berechnet. spaCy setzt hierfür voraus, dass man ein Sprachmodell verwendet, welches über Wort-Vektoren verfügt. Wir importieren dafür zunächst ein umfangreicheres Sprachmodell:"
    ]
   },
   {
@@ -917,9 +917,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Der folgende Algorithmus berechnet somit für jeden Film, in jedem Cluster, mit jedem weiteren Film des Clusters, dessen Kosinus-Ähnlichkeit und speichert diese gerundet in einer Confusion-Matrix. Man erhält folgende Tabelle, wobei jede Reihe einen Film darstellt und jede Spalte dessen Änlichkeit zu einem weiteren Film.\n",
+    "Der folgende Algorithmus berechnet somit für jeden Film in jedem Cluster mit jedem weiteren Film des Clusters dessen Kosinus-Ähnlichkeit und speichert diese gerundet in einer Confusion-Matrix. Es ergibt sich folgende Tabelle, wobei jede Reihe einen Film darstellt und jede Spalte dessen Änlichkeit zu einem weiteren Film.\n",
     "\n",
-    "Achtung: Die Berechnung der Confusion-Matrix dauert sehr lange."
+    "*Hinweis: Die Berechnung der Confusion-Matrix dauert sehr lange.*"
    ]
   },
   {
@@ -1355,7 +1355,7 @@
    "source": [
     "## Min-Max-Normalisierung\n",
     "\n",
-    "Wie man zuvor erkennen konnte, sind die Ähnlichkeiten aller Filme eines Clusters relativ hoch. Dies liegt an der doch größeren Anzahl an gleichen Wörtern (vor allem in deren Grundform) in jeder Zusammenfassung. Es ist deshalb sinnvoll alle Ergebnisse zu normalisieren, um ein breiteres Spektrum an Ähnlichkeiten zu erhalten. Die sogenannte Min-Max-Normalisierung bietet sich hierfür an. \n",
+    "Wie man zuvor erkennen konnte, sind die Ähnlichkeiten aller Filme eines Clusters relativ hoch. Dies liegt an der  größeren Anzahl an gleichen Wörtern (vor allem in deren Grundform) in jeder Zusammenfassung. Es ist deshalb sinnvoll alle Ergebnisse zu normalisieren, um ein breiteres Spektrum an Ähnlichkeiten zu erhalten. Die sogenannte Min-Max-Normalisierung bietet sich hierfür an. \n",
     "\n",
     "Es wird der minimale- und maximale Wert der Confusion Matrix benötigt:"
    ]
@@ -1406,7 +1406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Es wird vorrübergehend die Spalte der Titel entfernt, damit alle Werte einer Zahl entsprechen und dementsprechend normalisiert werden können."
+    "Anschließend wird vorrübergehend die Spalte der Titel entfernt, damit alle Werte einer Zahl entsprechen und dementsprechend normalisiert werden können."
    ]
   },
   {
@@ -1866,9 +1866,9 @@
    "source": [
     "## Beispiel: Filmempfehlung\n",
     "\n",
-    "Ein letztes Beispiel soll nun unseren anfänglich definierten Anwendungsfall darstellen. Wir gehen davon aus, dass ein Nutzer den Film *Inception* angesehen hat, begeistert war und nun einen möglichst ähnlichen Titel wiedergeben möchte. \n",
+    "Ein letztes Beispiel soll nun unseren anfänglich definierten Anwendungsfall abbilden: Wir gehen davon aus, dass ein Nutzer den Film *Inception* angesehen hat, begeistert war und nun einen möglichst ähnlichen Titel wiedergeben möchte. \n",
     "\n",
-    "Wir identifizieren hierfür den Film *Inception* in unserer Datenstruktur (in einer realen Anwendung beispielsweise eine in einer Datenbank). Wir transponieren nun unseren Datensatz bestehend aus einem Film und dessen Ähnlichkeiten zu weiteren Filmen aus dem gleichen Cluster, um einen Spaltenvektor zu erlangen. Schlussendlich sortieren wir unsere Liste der Ähnlichkeiten in absteigender Reihenfolge (\"Order By\"-Statement in Datenbank)."
+    "Wir identifizieren hierfür den Film *Inception* in unserer Datenstruktur (in einer realen Anwendung beispielsweise ein Eintrag in einer Datenbank). Anschließend transponieren wir den Datensatz bestehend aus einem Film und dessen Ähnlichkeiten zu weiteren Filmen aus dem gleichen Cluster, um einen Spaltenvektor zu erlangen. Schlussendlich sortieren wir unsere Liste der Ähnlichkeiten in absteigender Reihenfolge (\"Order By\"-Statement in einer Datenbankabfrage)."
    ]
   },
   {
@@ -1989,7 +1989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Werte absteigend sortieren."
+    "Die Werte werden absteigend sortiert:"
    ]
   },
   {
@@ -2101,7 +2101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wir sind nun in der Lage Vorschläge der inhaltlich ähnlichen Titel auszusprechen. Wir können hierfür eine Reihe von Filmen (siehe Netflix-Beispiel in Übersicht) visualisieren oder einen einzelnen Film ausgeben. Man muss beachten, dass man hierbei den gleichen Titel vernachlässigt. In einem realen Anwendungsfall könnte man ebenfalls alle Titel, welche der Nutzer bereits gesehen hat, exkludieren. Beispielsweise könnte man dem Nutzer als nächstes den Film: Die Truman Show empfehlen, insofern er diesen noch nicht gesehen hat. Dieser passt inhaltlich zu Inception, da es sich in beiden Filmen teilweise um eine Simulation dreht."
+    "Wir sind nun in der Lage, Vorschläge für inhaltlich ähnliche Titel zu geben. Hierfür könnte eine Reihe von Filmen (siehe Netflix-Beispiel in Übersicht) visualisiert werden oder ein einzelner Film ausgeben werden. Man muss beachten, dass man hierbei den gleichen Titel vernachlässigt. In einem realen Anwendungsfall könnte man ebenfalls alle Titel, welche der Nutzer bereits gesehen hat, ausschließen. Beispielsweise könnte man dem Nutzer als nächstes den Film: Die Truman Show empfehlen, insofern er diesen noch nicht gesehen hat. Dieser passt inhaltlich zu Inception, da es sich in beiden Filmen teilweise um eine Simulation dreht."
    ]
   },
   {
@@ -2110,7 +2110,8 @@
    "source": [
     "## Fazit\n",
     "\n",
-    "Mithilfe einer durch einen Crawler erstellten Datenbasis, geeigneten Vorverarbeitung der Daten und k-Means-Clustering-Algorithmus konnten wir unsere Daten bestehend aus Filmzusammenfassungen inhaltlich Clustern. Durch die Kosinus-Ähnlichkeit konnten wir alle Filme in einem Cluster vergleichen, um letztendlich einen Teil eines realen Anwendungsfalls von Natural Language Processing und Maschinen Learning in Streaming-Anwendungen abzubilden.\n",
+    "Mithilfe einer durch einen Web-Crawler erstellten Datenbasis, geeigneten Vorverarbeitungen der Daten und dem k-Means-Clustering-Algorithmus konnten wir die Filmzusammenfassungen inhaltlich clustern. Die Kosinus-Ähnlichkeit ermöglichte uns darüberhinaus einen Vergleich aller Filme in einem Cluster. \n",
+    "Zusammengefasst war es uns möglich, einen Teil eines realen Anwendungsfalls des Feldes Natural Language Processing und Maschinen Learning im Bereich Streaming-Anwendungen, abzubilden.\n",
     "\n",
     "* [Zurück zur Übersicht](./0_nlp_intro_schlaak_weise.ipynb)"
    ]
@@ -2125,9 +2126,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 - NLP",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2139,7 +2140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
