Add exported notebooks as pdfs

--- a/notebooks/1_nlp_crawling_schlaak_weise.ipynb
+++ b/notebooks/1_nlp_crawling_schlaak_weise.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Von [Pascal Schlaak](mailto:pascal.schlaak@studmail.htw-aalen.de), [Tim Weise](mailto:tim.weise@studmail.htw-aalen.de) - Natural Language Processing (SoSe 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Web Crawling\n",
     "\n",
     "Die Rohdaten für die Sprachverarbeitung stellt in unserem Projekt die International Movie Database (IMDB): Diese führt auf ihrer Seite eine \"Top 250\" der am besten bewerteten Filme auf. \n",
@@ -77,7 +84,11 @@
     "```sh \n",
     "scrapy crawl movies -o movies.json\n",
     "```\n",
-    "\n"
+    "\n",
+    "### Navigation\n",
+    "\n",
+    "* [Weiter zu: Datenvalidierung](./2_nlp_validation_schlaak_weise.ipynb)\n",
+    "* [Zurück zur Übersicht](./0_nlp_intro_schlaak_weise.ipynb)"
    ]
   },
   {
@@ -104,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
