--- a/notebooks/3_nlp_preprocessing_schlaak_weise.ipynb
+++ b/notebooks/3_nlp_preprocessing_schlaak_weise.ipynb
@@ -820,7 +820,7 @@
     "\n",
     "Eine Analyse und Vorverarbeitung aller Dateneinträge hat gezeigt, dass es manche Dateneinträge gibt, die nicht für eine inhaltliche Analyse in Frage kommen, da sie noch über keine Zusammenfassung verfügen. Diese haben wir demnach aus unserem Datensatz entfernt. Ferner konnten wir feststellen, dass eine Reduzierung der BoWs die Varianz unserer Daten verringert. Im folgenden Kapitel beschäftigen wir uns mit einer Vektorisierung der Daten zur Clusteranalyse und Bestimmung von Ähnlichkeiten innerhalb der Cluster.\n",
     "\n",
-    "* [Weiter zu: Verarbeitung aller Dateneinträge](./4_nlp_analysis_schlaak_weise.ipynb)\n",
+    "* [Weiter zu: Transformation der Daten](./4_nlp_analysis_schlaak_weise.ipynb)\n",
     "* [Zurück zur Übersicht](./0_nlp_intro_schlaak_weise.ipynb)"
    ]
   },
@@ -848,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
