--- a/notebooks/4_nlp_analysis_schlaak_weise.ipynb
+++ b/notebooks/4_nlp_analysis_schlaak_weise.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Von [Pascal Schlaak](mailto:pascal.schlaak@studmail.htw-aalen.de), [Tim Weise](mailto:tim.weise@studmail.htw-aalen.de) - Natural Language Processing (SoSe 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Transformation der Daten\n",
     "\n",
     "In diesem Notebook wird eine Clusteranalyse unserer zuvor vorverarbeiteten Daten durchgeführt, um inhaltlich ähnliche Filme einem Genre zuzuordnen. Basierend darauf soll eine Ähnlichkeitsanalyse innerhalb jedes Clusters durchgeführt werden, um Vorschläge für ähnliche Titel geben zu können.\n",
@@ -2140,7 +2147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
