--- a/notebooks/0_nlp_intro_schlaak_weise.ipynb
+++ b/notebooks/0_nlp_intro_schlaak_weise.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "Die Projektidee ist aus den Empfehlungslisten für ähnliche Titel bei der Filmwiedergabe auf Streaming-Plattformen bekannt: Firmen wie beispielsweise [Netflix](https://www.netflix.com/de-en/) nutzen bereits solche Funktionalität in ihrem System (siehe Abbildung), wobei verschiedenste Ansätze für die Generierung dieser Vorschläge existieren.  \n",
     "\n",
-    "![Netflix - Filmvorschläge](./imgs/netflix.png)\n",
+    "![Netflix - Filmvorschläge](imgs/netflix.png)\n",
     "\n",
     "Welche Datenbasis für die Vorschläge verwendet wird ist unklar. Es kommen mehrere Quellen in Frage:\n",
     "\n",
@@ -58,7 +58,7 @@
     "\n",
     "Wir empfehlen das Durcharbeiten der folgenden Notebooks in chronologischer Reihenfolge.\n",
     "\n",
-    "1. [Datencrawling](./)\n",
+    "1. [Datencrawling](./1_nlp_crawling_schlaak_weise.ipynb)\n",
     "2. [Datenvalidierung](./2_nlp_validation_schlaak_weise.ipynb)\n",
     "3. [Verarbeitung aller Dateneinträge](./3_nlp_preprocessing_schlaak_weise.ipynb)\n",
     "4. [Clusteranalyse und Vorhersage Empfehlung](./4_nlp_analysis_schlaak_weise.ipynb)"
@@ -88,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
